[tool.poetry]
name = "chiter"
version = "0.1.0"
description = "iterable as a chain"
authors = ["Yaroslav Bibaev <yaroslav@gmx.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/nedel/chiter"
homepage = "https://github.com/nedel/chiter"
keywords = ['fluent interface', 'method chaining']

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
flake8 = "^3.7"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
tox = "^3.12"

[tool.black]
line-length = 120
target-version = ["py37"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
